--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 								<header class="major">
 									
 									<h2><a href="https://github.com/OberlinCollaborativeCodingWinterTerm/winter-term-project-average_ds" target="_blank">Water Usage <br/> Data Analysis</a></h2>
-									<p>In this project, we explored the water usage data of a building for the last five years. We used Pandas, NumPy, and Matplotlib to analyze the recorded data, then built a predicting model with scikit-learn.</p>
+									<p>In this project, we explored the water usage data of a dormitory building for the last five years. We used Pandas, NumPy, and Matplotlib to analyze the recorded data, then built a predicting model with scikit-learn.</p>
 								</header>
-								<a href="https://github.com/OberlinCollaborativeCodingWinterTerm/winter-term-project-average_ds" target="_blank" class="image main"><img src="images/Water_Usage.png" alt="" /></a>
+								<a href="https://github.com/OberlinCollaborativeCodingWinterTerm/winter-term-project-average_ds" target="_blank" class="image main"><img src="images/noah_house.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/OberlinCollaborativeCodingWinterTerm/winter-term-project-average_ds" target="_blank" class="button large">View Project</a></li>
 								</ul>
