--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="https://github.com/OberlinCollaborativeCodingWinterTerm/winter-term-project-average_ds" target="_blank">Water Usage <br/> Data Analysis</a></h2>
-									<p>In this project, we explored the water usage data of a dormitory building for the last five years. We used Pandas, NumPy, and Matplotlib to analyze the recorded data, then built a predicting model with scikit-learn.</p>
+									<h2><a href="https://github.com/OberlinCollaborativeCodingWinterTerm/winter-term-project-average_ds" target="_blank">BUILDING WATER USAGE TREND ANALYSIS & PREDICTION</a></h2>
+									<p>In this project, we explored the water usage data of Noah Hall for the last five years. We used Pandas, NumPy, and Matplotlib to analyze the recorded data, then built a predicting model with scikit-learn.</p>
 								</header>
 								<a href="https://github.com/OberlinCollaborativeCodingWinterTerm/winter-term-project-average_ds" target="_blank" class="image main"><img src="images/noah_house.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -64,11 +64,11 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://github.com/binhphuoi04112002/Data-Visualization-Project" target="_blank">US Domestic Airline Flights<br /> Data Visualization Project
+										<h2><a href="https://github.com/binhphuoi04112002/Data-Visualization-Project" target="_blank">US DOMESTIC FLIGHT PERFORMANCE DASHBOARD
 										</a></h2>
 									</header>
 									<a href="https://github.com/binhphuoi04112002/Data-Visualization-Project" target="_blank" class="image fit"><img src="images/Screenshot.png" alt="" /></a>
-									<p>This is the project that I used to learn data visualization. The project consists of a website that holds several visualizations of the dataset stored in airline_data.csv.</p>
+									<p>This is the project that I used to learn data visualization. The project consists of an interactive website that offers a deep dive into yearly US domestic flight performances using Plotly in Python.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/binhphuoi04112002/Data-Visualization-Project" target="_blank" class="button">View Project</a></li>
 									</ul>
